# Skin-Cancer-Detection-ISIC-2024-

./: .gitignore  01_Literature_Review.ipynb  02_EDA.ipynb  03_Feature_Engineering.ipynb  04_Model_Training.ipynb  05_Evaluation_and_Analysis.ipynb  06_DL_Image_Training.ipynb  06_Image_Training_and_Fusion.ipynb  07_Phase3_Multimodal_Fusion.ipynb  README.md  presentation_guide.md.resolved  pyproject.toml  requirements.txt
outputs/: feature_list.csv
src/isic_challenge/: __init__.py  config.py  cv_utils.py  fusion.py  image_pipeline.py  metrics.py
web_app/: inference.py  main.py  requirements_web.txt
web_app/static/css/: style.css
web_app/static/js/: main.js
web_app/templates/: index.html
