[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "isic-challenge-training"
version = "0.1.0"
description = "Phase 1 tabular training utilities for ISIC 2024 (Phase 2: images + fusion)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "tqdm>=4.65",
]

[project.optional-dependencies]
image = [
  "torch>=2.0",
  "torchvision>=0.15",
  "timm>=0.9",
  "albumentations>=1.3",
  "opencv-python-headless>=4.8",
  "Pillow>=10",
  "h5py>=3.9",
]
jupyter = ["jupyter>=1.0", "joblib>=1.3"]

[tool.setuptools.packages.find]
where = ["src"]
